Bug 392218 - Cannot scrolling with mouse through list of files in view panel because of 'auto refresh', when download/copying files
Summary: Cannot scrolling with mouse through list of files in view panel because of 'a...
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.6.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Alex Bikadorov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-03-23 07:54 UTC by linnets
Modified: 2018-04-09 18:11 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenrecode (533.13 KB, image/gif)
2018-03-23 07:54 UTC, linnets
Details

Note You need to log in before you can comment on or make changes to this bug.
Description linnets 2018-03-23 07:54:28 UTC
Created attachment 111576 [details]
screenrecode

In Krusader 2.6, the size of files when downloading/copying will be updated instantly (it seems to be the work of 'auto refresh').
It's very useful, but unlike, such as Dolphin, in Krusader 2.6, while the file's size is updating, it's impossible to scroll up or down through list of files using mouse, when files' list will be always set to be contained the currently highlighted file/folder.
It has the same effect as I manually refresh 'Ctrl+R'.

I created a GIF file to describe the problem:

I created files have name patterns as 'test_x', x=1,...,50
Sort the files by name so that the file 'test_1' will always be the bottom of the list.
Cursor (highlighted) is currently at the file 'test_49'.
As demonstrated in the GIF, I could scroll up/down normally.
Run simple bash loop to write data to 'test_1'.
Now I can't scroll down.
Comment 1 Martin Kostolný 2018-03-23 08:01:01 UTC
Thanks for report! I can confirm this.
Comment 2 Alex Bikadorov 2018-03-31 17:13:23 UTC
I have a pending patch: https://phabricator.kde.org/D11840

The idea is to only scroll to the current item if the item is currently visible. Scrolling is wanted e.g. if files are added and the current item moves down in the list so it is not visible anymore.
Comment 3 linnets 2018-04-01 19:42:13 UTC
(In reply to Alex Bikadorov from comment #2)
> I have a pending patch: https://phabricator.kde.org/D11840
> 
> The idea is to only scroll to the current item if the item is currently
> visible. Scrolling is wanted e.g. if files are added and the current item
> moves down in the list so it is not visible anymore.

It works, I don't have this problem so far! Thanks!
Comment 4 linnets 2018-04-02 07:20:42 UTC
(In reply to Alex Bikadorov from comment #2)
> I have a pending patch: https://phabricator.kde.org/D11840

I have small issue with this patch, it seems that the current selection is not preserved as accessing a folder and going back.
Comment 5 Alex Bikadorov 2018-04-02 17:53:50 UTC
Thanks for testing. I updated the patch. Please test again.
Comment 6 linnets 2018-04-02 20:13:03 UTC
(In reply to Alex Bikadorov from comment #5)
At the moment, I don't have those problems. I'll report back if something happens!
Comment 7 linnets 2018-04-05 08:11:00 UTC
Please, see that bug (392750):
https://bugs.kde.org/show_bug.cgi?id=392750

It relates to this bug:
When file's content is constantly changing, if I press F2, or 'rename' a file in current folder, then as new behavior of Krusader 2.6, the rename process will be canceled.
But, after that, rename will not work (I described more detailed in the bug report above).

And this related to the current bug, if I do not restart Krusader (after encounter bug-392750), then this old bug comes back.
Comment 8 Alex Bikadorov 2018-04-09 18:11:37 UTC
Git commit 2fbd49f01a898dd1d711658e3e33596a7852d143 by Alexander Bikadorov.
Committed on 09/04/2018 at 18:08.
Pushed by abikadorov into branch 'master'.

Panel: Fixed unwanted scrolling and preserving current item on refresh

FIXED: [ 392218 ] Allow scrolling during filesystem changes in current directory

Differential Revision: https://phabricator.kde.org/D11840

M  +53   -41   krusader/Panel/PanelView/krinterview.cpp
M  +10   -5    krusader/Panel/PanelView/krinterview.h
M  +36   -37   krusader/Panel/PanelView/krview.cpp
M  +12   -6    krusader/Panel/PanelView/krview.h
M  +18   -33   krusader/Panel/PanelView/listmodel.cpp
M  +1    -1    krusader/Panel/PanelView/listmodel.h
M  +3    -8    krusader/Panel/panelfunc.cpp

https://commits.kde.org/krusader/2fbd49f01a898dd1d711658e3e33596a7852d143