Panel: Fixed unwanted scrolling and preserving current item on refresh

FIXED: [ 392218 ] Allow scrolling during filesystem changes in current directory
BUG: 392218

Differential Revision: https://phabricator.kde.org/D11840